
		Users of 64 bit systems should backup the files database and
		all download directories before attempting to use 0.83.13.
		This will upgrade the files database on 64 bit systems, but
		also copied databases from 64 to 32 bit systems.
		Some *BSD systems are updated too!

		Rolf, please report the results of the upgrade.

v0.83.14	23-Feb-2006

	mbsetup:
		Added archiver selection for nodes in node setup.


v0.83.13	13-Feb-2006 - 23-Feb-2006

	upgrade:
		Start mbsetup and leave. If files databases need to be fixed
		it will then be done.

	mbselib.a:
		Fixed another 32/64 bit issue in the files databases and added
		automatic correction if detected.

	mbsebbs:
		Writes LINES and COLUMNS environment into data.msg so that the
		joe editor can use that.
		Changed zmodem transmitter timeout to 60 seconds and changed
		the zmodem init fase so that clients that don't start automatic
		have a chance to start the transfer.
		The zmodem transmitter now uses buffered output.

	mbmsg:
		With the post function the right time is now used.

	mbcico:
		Added real error message for failed outgoing IP connections.

	mbtask:
		Fixed startup problem on new installations.
		Some code cleanup.

	mbsetup:
		When a filearea was moved to another path the symlinks were not
		moved to the new path.


v0.83.12	06-Feb-2006 - 13-Feb-2006

	mbselib.a:
		On socket send error 2, abort the client program.

	mbsebbs:
		Added screen rows detection using ANSI sequences needed for
		some terminal programs like minicom.

	mbtask:
		On shutdown also send PART and QUIT messages to all our links
		for our own users if they are still online so that the network
		will keep the correct state.
		Removed all thread programming so that mbtask is now a single
		process again. This should fix the crash problem during chat.


v0.83.11	28-Jan-2006 - 06-Feb-2006

	mbtask:
		When the IBC server detects a IP change of a remote server it
		will completly restart the connection with that remote.